--- a/demo/phones/phone-list.html
+++ b/demo/phones/phone-list.html
@@ -17,8 +17,8 @@
 
             <ul class="phones">
                 <li ng-repeat="phone in phones | filter:query1 |orderBy : orderProp" class="thumbnail">
-                    <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"></a>
-                    <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
+                    <a ng-href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}"></a>
+                    <a ng-href="#/phones/{{phone.id}}">{{phone.name}}</a>
                     <p>{{phone.snippet}}</p>
                 </li>
             </ul>
